# coderun

./: .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
first_2023_backend/: Cargo.toml
first_2023_backend/155-exactly-one-occur/: Cargo.toml  README.md
first_2023_backend/155-exactly-one-occur/src/: main.rs
first_2023_backend/162-random-swaps/: Cargo.toml
first_2023_backend/162-random-swaps/src/: main.rs
first_2023_backend/167-product-equal-k/: Cargo.toml
first_2023_backend/167-product-equal-k/src/: main.rs
first_2023_backend/169-square-and-circle/: Cargo.toml
first_2023_backend/169-square-and-circle/src/: main.rs
first_2023_backend/182-gcd-and-lcm-yandex/: Cargo.toml  README.md
first_2023_backend/182-gcd-and-lcm-yandex/src/: main.rs
first_2023_backend/187-pairwise-xor/: Cargo.toml  README.md
first_2023_backend/187-pairwise-xor/src/: main.rs
first_2023_backend/198-del-to-max-subarray-sum-yandex/: Cargo.toml
first_2023_backend/198-del-to-max-subarray-sum-yandex/src/: main.rs
first_2023_backend/204-server-error/: Cargo.toml  README.md
first_2023_backend/204-server-error/src/: main.rs
first_2023_backend/211-meetings/: Cargo.toml  README.md
first_2023_backend/222-two-cliques/: README.md
first_2023_backend/229-mobilization/: Cargo.toml  README.md
first_2023_backend/229-mobilization/src/: main.rs
first_2023_backend/251-symbols-set-min-susbstr/: Cargo.toml
first_2023_backend/251-symbols-set-min-susbstr/src/: main.rs
first_2023_backend/257-find-rle-string-length/: Cargo.toml  README.md
first_2023_backend/260-phone-formatting/: README.md
first_2023_backend/270-mtf-encoding-decoding/: Cargo.toml  README.md
first_2023_backend/270-mtf-encoding-decoding/src/: main.rs
first_2023_backend/276-area-between-curves/: README.md
first_2023_backend/286-decrypt-message/: Cargo.toml  README.md
first_2023_backend/286-decrypt-message/src/: main.rs
first_2023_backend/300-buses-ya-intern/: Cargo.toml
first_2023_backend/300-buses-ya-intern/src/: main.rs
first_2023_backend/306-dayofweek-ya-intern/: Cargo.toml
first_2023_backend/306-dayofweek-ya-intern/src/: main.rs
first_2023_backend/313-medians-ya-intern/: Cargo.toml
first_2023_backend/313-medians-ya-intern/src/: main.rs
first_2023_backend/324-trading-ya-intern/: Cargo.toml  README.md
first_2023_backend/324-trading-ya-intern/src/: main.rs
first_2023_backend/332-number-system/: Cargo.toml  README.md
first_2023_backend/332-number-system/src/: main.rs
first_2023_backend/336-ivan-and-opensource/: Cargo.toml  README.md
first_2023_backend/336-ivan-and-opensource/src/: main.rs
first_2023_backend/344-checkers/: Cargo.toml
first_2023_backend/344-checkers/src/: main.rs
first_2023_backend/352-rocks-and-jewels/: Cargo.toml  README.md
first_2023_backend/352-rocks-and-jewels/src/: main.rs
first_2023_backend/353-sorting-reverse-order/: main.py
first_2023_backend/357-substring-graph/: Cargo.toml  README.md
first_2023_backend/357-substring-graph/src/: main.rs
first_2023_backend/360-a-1-find-most-frequent/: Cargo.toml  README.md
first_2023_backend/360-a-1-find-most-frequent/src/: main.rs
first_2023_backend/361-median-out-of-three/: Cargo.toml  README.md
first_2023_backend/361-median-out-of-three/src/: main.rs
first_2023_backend/377-diversity-scoring/: Cargo.toml  README.md
first_2023_backend/377-diversity-scoring/src/: main.rs
first_2023_backend/378-diversity-improvement/: README.md
first_2023_backend/380-plane-boarding/: Cargo.toml  README.md
first_2023_backend/381-calendar-formatting/: Cargo.toml  README.md
first_2023_backend/381-calendar-formatting/src/: main.rs
problems/checkers/: Cargo.toml
second_2024_backend/: Cargo.toml
second_2024_backend/3134-phi-backend/: Cargo.toml  README.md
second_2024_backend/422-two-teams/: Cargo.toml  README.md
second_2024_backend/423-nearest-bus-stop/: Cargo.toml  README.md
second_2024_backend/423-nearest-bus-stop/src/: main.rs
second_2024_backend/424-lucky-number/: Cargo.toml  README.md
second_2024_backend/425-questions-about-maximum/: Cargo.toml  README.md  input-9071-9965.txt  input-9696-9974.txt  input-9795-9930.txt  input-9972-9966.txt  input.txt
second_2024_backend/426-fair-division/: Cargo.toml  README.md
second_2024_backend/427-microwave/: Cargo.toml  README.md
second_2024_backend/430-paired-codes/: Cargo.toml  README.md
second_2024_backend/434-splitting-into-terms/: Cargo.toml  README.md
second_2024_backend/435-divisors-number/: Cargo.toml  README.md
second_2024_backend/436-work-schedule/: Cargo.toml  README.md
second_2024_backend/437-biggest-square/: Cargo.toml  README.md
second_2024_backend/438-crystals/: Cargo.toml  README.md
second_2024_backend/439-couple-of-letters/: Cargo.toml  README.md
second_2024_backend/440-queen-amount/: Cargo.toml  README.md  input.txt
second_2024_backend/441-tableau/: Cargo.toml  README.md  input.txt  input_ex2.txt
second_2024_backend/442-balls-and-baskets/: Cargo.toml  README.md
second_2024_backend/443-invervals/: Cargo.toml
second_2024_backend/444-tic-tac-toe/: Cargo.toml  README.md  input.txt
second_2024_backend/445-tiles/: Cargo.toml  README.md
second_2024_backend/446-super-marathon/: Cargo.toml  README.md  input.txt  input__.txt
second_2024_backend/447-gcd/: Cargo.toml  README.md
second_2024_backend/449-combo/: Cargo.toml  README.md  input.txt
second_2024_backend/450-team-contest/: README.md
(+102 files in other folders)
