[workspace]
members = [
    "155-exactly-one-occur",
    "162-random-swaps",
    "167-product-equal-k",
    "182-gcd-and-lcm-yandex",
    "169-square-and-circle",
    "187-pairwise-xor",
    "198-del-to-max-subarray-sum-yandex",
    "204-server-error",
    "251-symbols-set-min-susbstr",
    "286-decrypt-message",
    "300-buses-ya-intern",
    "306-dayofweek-ya-intern",
    "313-medians-ya-intern",
    "324-trading-ya-intern",
    "332-number-system",
    "336-ivan-and-opensource",
    "344-checkers",
    "352-rocks-and-jewels",
    "357-substring-graph",
    "360-a-1-find-most-frequent",
    "361-median-out-of-three"
]
