[workspace]
members = [
    "155-exactly-one-occur",
    "162-random-swaps",
    "167-product-equal-k",
    "169-square-and-circle",
    "182-gcd-and-lcm-yandex",
    "187-pairwise-xor",
    "198-del-to-max-subarray-sum-yandex",
    "204-server-error",
    "211-meetings",
    "222-two-cliques",
    "229-mobilization",
    "251-symbols-set-min-susbstr",
    "257-find-rle-string-length",
    "260-phone-formatting",
    "270-mtf-encoding-decoding",
    "276-area-between-curves",
    "286-decrypt-message",
    "300-buses-ya-intern",
    "306-dayofweek-ya-intern",
    "313-medians-ya-intern",
    "324-trading-ya-intern",
    "332-number-system",
    "336-ivan-and-opensource",
    "344-checkers",
    "352-rocks-and-jewels",
    "357-substring-graph",
    "360-a-1-find-most-frequent",
    "361-median-out-of-three",
    "377-diversity-scoring",
    "378-diversity-improvement",
    "380-plane-boarding",
    "381-calendar-formatting",
]

resolver = "2"

[profile.release]
debug = 1

[workspace.lints.clippy]

#all = correctness, suspicious, style, complexity, perf
all      = { level = "deny", priority = -2 }
nursery  = { level = "warn", priority = -1 } #default allow
pedantic = { level = "warn", priority = -1 } #default allow

separated_literal_suffix   = "allow"
unseparated_literal_suffix = "deny"

[workspace.dependencies]
rand = "0.9.0"
