[workspace]
members = ["3134-phi-backend"]

resolver = "2"

[profile.release]

debug = 1

[workspace.lints.clippy]

#all = correctness, suspicious, style, complexity, perf
all      = { level = "deny", priority = -2 }
nursery  = { level = "warn", priority = -1 } #default allow
pedantic = { level = "warn", priority = -1 } #default allow

separated_literal_suffix   = "allow"
unseparated_literal_suffix = "deny"
