[workspace]

members = [
    "3134-phi-backend",
    "449-combo",
    "445-tiles",
    "444-tic-tac-toe",
    "441-tableau",
    "440-queen-amount",
    "439-couple-of-letters",
    "438-crystals",
    "435-divisors-number",
    "434-splitting-into-terms",
    "423-nearest-bus-stop",
    "422-two-teams",
    "424-lucky-number",
    "426-fair-division",
    "430-paired-codes",
    "436-work-schedule",
    "437-biggest-square",
    "442-balls-and-baskets",
    "446-super-marathon",
]

resolver = "2"

[profile.release]

debug = 1

[workspace.lints.clippy]

#all = correctness, suspicious, style, complexity, perf
all      = { level = "deny", priority = -2 }
nursery  = { level = "warn", priority = -1 } #default allow
pedantic = { level = "warn", priority = -1 } #default allow

separated_literal_suffix   = "allow"
unseparated_literal_suffix = "deny"
