[workspace]

members = [
    "3134-phi-backend",
    "422-two-teams",
    "423-nearest-bus-stop",
    "424-lucky-number",
    "425-questions-about-maximum",
    "426-fair-division",
    "427-microwave",
    "430-paired-codes",
    "434-splitting-into-terms",
    "435-divisors-number",
    "436-work-schedule",
    "437-biggest-square",
    "438-crystals",
    "439-couple-of-letters",
    "440-queen-amount",
    "441-tableau",
    "442-balls-and-baskets",
    "444-tic-tac-toe",
    "445-tiles",
    "446-super-marathon",
    "447-gcd",
    "449-combo",
    "450-team-contest",
]

resolver = "2"

[profile.release]

debug = 1

[workspace.lints.clippy]

#all = correctness, suspicious, style, complexity, perf
all      = { level = "deny", priority = -2 }
nursery  = { level = "warn", priority = -1 } #default allow
pedantic = { level = "warn", priority = -1 } #default allow

separated_literal_suffix   = "allow"
unseparated_literal_suffix = "deny"

[workspace.dependencies]
rand = "0.9.0"
